<?xml version="1.0"?>
<package>
  <name>pwm_pca9685</name>
  <version>1.0.0</version>
  <description>PWM chip driver, 16 channels, i2c </description>
  <maintainer email="dheera@dheera.net">dheera</maintainer>
  <license>MIT</license>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
